crates/rlf-macros/tests/fail/cycle.stderr
error: cyclic reference: a -> b -> c -> a
 --> tests/fail/cycle.rs:6:9
  |
6 |     c = "see {a}";
  |         ^^^^^^^^^
